2013.11.23cxf，ejb完善