@@ -1,22 +1,28 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>com.wizard</groupId>
-	<artifactId>wizard-websocket</artifactId>
-	<packaging>war</packaging>
-	<version>1.0.0</version>
-	<name>wizard-websocket Maven Webapp</name>
-	<url>http://maven.apache.org</url>
-	<properties>
-		<web.port>8080</web.port>
 
+	<groupId>com.wizard</groupId>
+	<artifactId>wizard-cxf-client</artifactId>
+	<version>1.0.0</version>
+	<packaging>jar</packaging>
+
+	<name>wizard-cxf-client</name>
+	<url>http://maven.apache.org</url>
+
+	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+
+		<mainClass>com.wizard.cxf.client.CxfClient</mainClass>
 
 		<!-- wizard -->
 		<wizard.version>1.0.0</wizard.version>
 
 		<!-- dependency -->
 		<junit.version>4.10</junit.version>
+		<org.springframework.version>3.1.2.RELEASE</org.springframework.version>
+		<org.apache.cxf.version>2.5.9</org.apache.cxf.version>
+		<org.apache.cxf.transports.common.version>2.5.9</org.apache.cxf.transports.common.version>
 		<slf4j.version>1.6.1</slf4j.version>
 		<log4j.version>1.2.16</log4j.version>
 
@@ -25,8 +31,9 @@
 		<maven-compiler-plugin.version>2.5.1</maven-compiler-plugin.version>
 		<maven-deploy-plugin.version>2.8-SNAPSHOT</maven-deploy-plugin.version>
 		<maven-surefire-plugin.version>2.10</maven-surefire-plugin.version>
-		<tomcat7-maven-plugin.version>2.1-SNAPSHOT</tomcat7-maven-plugin.version>
+		<exec-maven-plugin.version>1.2.1</exec-maven-plugin.version>
 	</properties>
+
 	<dependencies>
 
 		<!-- wizard -->
@@ -50,6 +57,46 @@
 			<scope>test</scope>
 		</dependency>
 
+		<!-- spring -->
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-core</artifactId>
+			<version>${org.springframework.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-web</artifactId>
+			<version>${org.springframework.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-context</artifactId>
+			<version>${org.springframework.version}</version>
+		</dependency>
+
+		<!-- apache cxf -->
+		<dependency>
+			<groupId>org.apache.cxf</groupId>
+			<artifactId>cxf-rt-core</artifactId>
+			<version>${org.apache.cxf.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.cxf</groupId>
+			<artifactId>cxf-rt-frontend-jaxws</artifactId>
+			<version>${org.apache.cxf.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.cxf</groupId>
+			<artifactId>cxf-rt-transports-http</artifactId>
+			<version>${org.apache.cxf.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.cxf</groupId>
+			<artifactId>cxf-rt-transports-common</artifactId>
+			<version>${org.apache.cxf.transports.common.version}</version>
+		</dependency>
+
+
 		<!-- LOG -->
 		<dependency>
 			<groupId>org.slf4j</groupId>
@@ -68,7 +115,7 @@
 		</dependency>
 	</dependencies>
 	<build>
-		<finalName>wizard-websocket</finalName>
+		<finalName>wizard-cxf-client</finalName>
 		<resources>
 			<resource>
 				<directory>src/main/resources</directory>
@@ -99,40 +146,22 @@
 				</configuration>
 			</plugin>
 			<plugin>
-				<groupId>org.apache.tomcat.maven</groupId>
-				<artifactId>tomcat7-maven-plugin</artifactId>
-				<version>${tomcat7-maven-plugin.version}</version>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>exec-maven-plugin</artifactId>
+				<version>${exec-maven-plugin.version}</version>
 				<configuration>
-					<port>${web.port}</port>
-					<uriEncoding>UTF-8</uriEncoding>
+					<executable>java</executable>
+					<arguments>
+						<argument>-server</argument>
+						<argument>-XX:MaxPermSize=64m</argument>
+						<argument>-Xms256m</argument>
+						<argument>-Xmx256m</argument>
+						<argument>-classpath</argument>
+						<classpath />
+						<argument>${mainClass}</argument>
+					</arguments>
 				</configuration>
 			</plugin>
 		</plugins>
 	</build>
-	<repositories>
-		<repository>
-			<id>people.apache.snapshots</id>
-			<url>http://repository.apache.org/content/groups/snapshots-group/</url>
-			<releases>
-				<enabled>false</enabled>
-			</releases>
-			<snapshots>
-				<enabled>true</enabled>
-			</snapshots>
-		</repository>
-	</repositories>
-	<pluginRepositories>
-		<pluginRepository>
-			<id>apache.snapshots</id>
-			<name>Apache Snapshots</name>
-			<url>http://repository.apache.org/content/groups/snapshots-group/</url>
-			<releases>
-				<enabled>false</enabled>
-			</releases>
-			<snapshots>
-				<enabled>true</enabled>
-			</snapshots>
-		</pluginRepository>
-	</pluginRepositories>
 </project>
-
